Fixed the alignment for the send button on the footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,7 @@ body {
 .field {
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
 }
 
 .label {
